# parquet-analyzer

./: .gitignore  DockerFile  README.md  docker-compose.yml  docker_compose.md  setup.cfg  setup.py
.github/workflows/: ci.yaml
data/output/: statistics.csv
data/raw/: training_data.csv
doc/: docker_compose_multiple_container.txt  docker_image_singal_container.txt
notebooks/: calculator.ipynb  csv_to_parquet.ipynb  load_data.ipynb  load_parquet_data.ipynb  load_traning_data_from_parquet.ipynb  services.ipynb
src/parquet/: config.py  csv_to_parquet.py  load_csv.py  load_csv1.py  load_parquet.py  load_parquet1.py  load_training_data.py  load_training_parquet_data.py  stats_compute.py  stats_for_service.py  util.py
tests/: test_calculator.py  test_load_parquet1.py  testenv  testenvjson
