[metadata]
name = parquet_analyzer
version = 0.1.0
description = parquet file analyzer for PQR data
author = Your Name
license = MIT

[options]
packages = find_namespace:
package_dir =
    =src
include_package_data = True
zip_safe = False

install_requires =
    numpy
    pandas
    requests
    urllib3
    pytest
    pytest-cov
    hypothesis
    python-dotenv
    scikit-learn
    pyarrow
    pyjwt

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
testing =
    pytest
    pytest-cov
    setuptools

[tool:pytest]
addopts =
    --cov=parquet_analyzer
    --cov-report=term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths =
    tests
